--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "7.27.1",
     "@eslint/js": "^9.25.0",
+    "@types/jest": "29.5.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
@@ -22,7 +25,12 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
-    "typescript": "~5.8.3",
+    "install": "0.13.0",
+    "jest": "29.7.0",
+    "npm": "11.4.1",
+    "ts-jest": "29.3.4",
+    "ts-node": "10.9.2",
+    "typescript": "5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   }
