--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-  "name": "cushon",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "test": "jest"
-  },
-  "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
-  },
-  "devDependencies": {
-    "@babel/preset-typescript": "7.27.1",
-    "@eslint/js": "^9.25.0",
-    "@types/jest": "29.5.14",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "install": "0.13.0",
-    "jest": "29.7.0",
-    "npm": "11.4.1",
-    "ts-jest": "29.3.4",
-    "ts-node": "10.9.2",
-    "typescript": "5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+	"name": "cushon",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview",
+		"test": "jest"
+	},
+	"dependencies": {
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0"
+	},
+	"devDependencies": {
+		"@babel/preset-typescript": "7.27.1",
+		"@eslint/js": "^9.25.0",
+		"@testing-library/dom": "10.4.0",
+		"@testing-library/react": "16.3.0",
+		"@types/jest": "29.5.14",
+		"@types/react": "19.1.5",
+		"@types/react-dom": "19.1.5",
+		"@vitejs/plugin-react": "^4.4.1",
+		"eslint": "^9.25.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^16.0.0",
+		"install": "0.13.0",
+		"jest": "29.7.0",
+		"npm": "11.4.1",
+		"ts-jest": "29.3.4",
+		"ts-node": "10.9.2",
+		"typescript": "5.8.3",
+		"typescript-eslint": "^8.30.1",
+		"vite": "^6.3.5"
+	}
 }
